login page responsive design alignment fixing

--- a/client/src/app/login/login.component.scss
+++ b/client/src/app/login/login.component.scss
@@ -281,9 +281,9 @@ $topnav-background-color: #222;
 
 @media (max-width: 767px) {
     .login-page {
-        display    : flex;
-        align-items: center;
-        height     : 100vh;
+        // display    : flex;
+        // align-items: center;
+        // height     : 100vh;
 
         .logininner {
             margin: 20px auto 15px;
